WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151538
[iOS] Option-up and Option-down should scroll a little less than a full page
https://bugs.webkit.org/show_bug.cgi?id=151538
Summary
[iOS] Option-up and Option-down should scroll a little less than a full page
Tim Horton
Reported
2015-11-21 21:28:11 PST
[iOS] Option-up and Option-down should scroll a little less than a full page
Attachments
Patch
(7.21 KB, patch)
2015-11-21 21:28 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-11-21 21:28:30 PST
Created
attachment 266041
[details]
Patch
Tim Horton
Comment 2
2015-11-21 21:29:14 PST
Looking into writing a test, will have to plumb the ability to use arbitrary modifiers when sending key events.
WebKit Commit Bot
Comment 3
2015-11-21 21:30:37 PST
Attachment 266041
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2882: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2015-11-22 08:24:21 PST
Comment on
attachment 266041
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=266041&action=review
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2868 > +- (Optional<FloatPoint>)_scrollOffsetForEvent:(WebIOSEvent *)event
FloatSize?
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2885 > + CGFloat scrollDistance = ^ CGFloat {
Not sure what's happening here.
> Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2907 > + return computeOffset(Line, Left);
I would prefer blank lines after all the returns.
Tim Horton
Comment 5
2015-11-30 10:00:41 PST
(In reply to
comment #4
)
> Comment on
attachment 266041
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=266041&action=review
> > > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2868 > > +- (Optional<FloatPoint>)_scrollOffsetForEvent:(WebIOSEvent *)event > > FloatSize?
_scrollByContentOffset takes a FloatPoint :D
> > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2885 > > + CGFloat scrollDistance = ^ CGFloat { > > Not sure what's happening here.
Blocks, man! No, but really, that's the syntax for when you want to explicitly state the return type of a block. Which I need to do because of the 0 (and the ints). Or I could cast all of those but I hate that more.
> > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:2907 > > + return computeOffset(Line, Left); > > I would prefer blank lines after all the returns.
Sure.
Tim Horton
Comment 6
2015-11-30 11:53:23 PST
http://trac.webkit.org/changeset/192811
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug