[iOS] Option-up and Option-down should scroll a little less than a full page https://bugs.webkit.org/show_bug.cgi?id=151538 <rdar://problem/23642675>

Reviewed by Simon Fraser.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _scrollOffsetForEvent:]):
(-[WKContentView _interpretKeyEvent:isCharEvent:]):
Clean up the code a little, and adjust so that we *always* use pageStep
instead of just scrolling by the unobscured rect when scrolling by a page.
Previously, we did for the spacebar, but not for option-up and option-down.


Canonical link: https://commits.webkit.org/169772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192811 268f45cc-cd09-0410-ab3c-d52691b4dbfc